--- a/index.html
+++ b/index.html
@@ -2,9 +2,14 @@
 layout: default
 ---
 
-Hello! I’m a PhD student in Chemical Physics at Stanford.  I'm interested in using 
-statistics and physics to better understand biomolecular assembly.
+Hello! I’m a PhD student in Chemical Physics at Stanford. I like using statistics and physics 
+to better understand biomolecules, and hope to further our understanding of proteins and DNA 
+to be able to harness the fascinating processes of biomolecular self-assembly to create 
+useful nanomaterials.
 
+I'm also a collaborator, a teacher, at times a science writer, a classically-trained pianist, and a rower.
+
+Thanks for visiting!
 
 <div class="posts">
   {% for post in site.posts %}
