--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@ layout: default
 Hello! I’m a PhD student in Chemical Physics at Stanford. I like using statistics and physics 
 to better understand biomolecules, and hope to further our understanding of proteins and DNA 
 to be able to harness the fascinating processes of biomolecular self-assembly to create 
-useful nanomaterials.
+useful nanomaterials.  
 
-I'm also a collaborator, a teacher, at times a science writer, a classically-trained pianist, and a rower.
 
-Thanks for visiting!
+I'm also a collaborator, a teacher, a science writer, a classically-trained pianist, and a rower.  
+
+
+Thanks for visiting!  
 
 <div class="posts">
   {% for post in site.posts %}
