--- a/index.html
+++ b/index.html
@@ -5,13 +5,11 @@ layout: default
 Hello! I’m a PhD student in Chemical Physics at Stanford. I like using statistics and physics 
 to better understand biomolecules, and hope to further our understanding of proteins and DNA 
 to be able to harness the fascinating processes of biomolecular self-assembly to create 
-useful nanomaterials.  
+useful nanomaterials. <br />
 
+I'm also a collaborator, a teacher, a science writer, a classically-trained pianist, and a rower.  <br />
 
-I'm also a collaborator, a teacher, a science writer, a classically-trained pianist, and a rower.  
-
-
-Thanks for visiting!  
+Thanks for visiting!  <br />
 
 <div class="posts">
   {% for post in site.posts %}
