--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@ Hello! I’m a PhD student in Chemical Physics at Stanford. I like using statist
 to better understand biomolecules, and hope to further our understanding of proteins and DNA 
 to be able to harness the fascinating processes of biomolecular self-assembly to create 
 useful nanomaterials. <br />
-
-I'm also a collaborator, a teacher, a science writer, a classically-trained pianist, and a rower.  <br />
-
+ <br />
+At times I'm also a collaborator, a teacher, a science writer, a classically-trained pianist, and a rower.  <br />
+<br />
 Thanks for visiting!  <br />
 
 </p>
