--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ to better understand biomolecules, and hope to further our understanding of prot
 to be able to harness the fascinating processes of biomolecular self-assembly to create 
 useful nanomaterials. <br />
  <br />
-At times I'm also a collaborator, a teacher, a science writer, a classically-trained pianist, and a rower.  <br />
+At times I'm also a collaborator, a teacher, a science writer, a classically-trained pianist, and a rower working toward a sub-7:00 2K.  <br />
 <br />
 Thanks for visiting!  <br />
 
