--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@ to better understand biomolecules, and hope to further our understanding of prot
 to be able to harness the fascinating processes of biomolecular self-assembly to create 
 useful nanomaterials. <br />
  <br />
-I'm invigorated to be an eager collaborator, a mentor for students, a writer, a traveller, a classically-trained pianist, and a rower working toward a sub-7:00 2K.  <br />
+I'm also a collaborator, a mentor, a writer, a traveller, a classically-trained pianist, and a rower working toward a sub-7:00 2K.  <br />
 
 </p>
