--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@ layout: default
 
 <p>
   
-Hello! I’m a PhD student in Chemical Physics at Stanford. I like using statistics and physics 
-to better understand biomolecules, and hope to further our understanding of proteins and DNA 
-to be able to harness the fascinating processes of biomolecular self-assembly to create 
-useful nanomaterials. <br />
+Hello! I’m a PhD student in Chemical Physics at Stanford working with Rhiju Das. I 
+  use methods from statistical inference and physics to improve RNA structure prediction,
+  with the goal of someday making complex RNA machines like fast eight-bit adders a reality.  <br />
  <br />
-I'm also a mentor, a writer, a classically-trained pianist, and an avid rower.  <br />
+   I'm also a mentor, a writer, and a classically-trained pianist. When I'm not thinking about training predictive models, 
+  I can also be found training [in boats](https://www.instagram.com/hwaysteele/)! 
+  <br />
 </p>
