--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@ Hello! I’m a PhD student in Chemical Physics at Stanford working with Rhiju Da
   with the goal of someday making complex RNA machines like fast eight-bit adders a reality.  <br />
  <br />
    I'm also a mentor, a writer, and a classically-trained pianist. When I'm not thinking about training predictive models, 
-  I can also be found doing high-performance training [in boats](https://www.instagram.com/hwaysteele/)! 
+  I can also be found doing high-performance training <a href="https://www.instagram.com/hwaysteele">in boats!</a> 
   <br />
 </p>
