--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@ Hello! I’m a PhD student in Chemical Physics at Stanford working with Rhiju Da
   use methods from statistical inference and physics to improve RNA structure prediction,
   with the goal of someday making complex RNA machines like fast eight-bit adders a reality.  <br />
  <br />
-   I'm also a mentor, a writer, and a classical pianist. When I'm not thinking about training predictive models, 
-  I can be found doing high-performance training <a href="https://www.instagram.com/hwaysteele">in boats!</a> 
+When I'm not thinking about training predictive models, I can be found doing high-performance training <a href="https://www.instagram.com/hwaysteele">in boats!</a> 
   <br />
 </p>
