--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@ layout: default
 
 <p>
   
-Hello! I’m a PhD student in Chemical Physics at Stanford working with Rhiju Das. I 
-  use methods from statistical inference and physics to improve RNA structure prediction,
-  with the goal of someday making complex RNA machines like fast eight-bit adders a reality.  <br />
+Hello! I’m a PhD candidate in Chemical Physics at Stanford working with Rhiju Das. I use statistical mechanics,
+  gradient descent, and high-throughput experiments to improve RNA structure models 
+  and someday design the next generation of biomolecular computers.   <br />
  <br />
-When I'm not thinking about training predictive models, I can be found doing high-performance training <a href="https://www.instagram.com/hwaysteele">in boats!</a> 
+When I'm not training models, I can be found training <a href="https://www.instagram.com/hwaysteele">in boats!</a> 
   <br />
 </p>
