--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@ layout: default
 
 <p>
   
-Hello! I’m a PhD candidate in Chemical Physics at Stanford working with Rhiju Das. I use statistical mechanics,
-  gradient descent, and high-throughput experiments to improve RNA structure models 
-  and someday design the next generation of biomolecular computers.   <br />
+Hello! I’m a PhD candidate in Chemical Physics at Stanford working with Rhiju Das.
+  I'm interested in developing methods to better understand Nature's complex RNA-based machines,
+  like viruses, as well as learn principles to better design our own RNA-based technologies. <br />
+
  <br />
-When I'm not training models, I can be found training <a href="https://www.instagram.com/hwaysteele">in boats!</a> 
+When not thinking about science, I can most often be found in <a href="https://www.instagram.com/hwaysteele">a boat of some sort.</a> 
   <br />
 </p>
