--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@ layout: default
 
 <p>
   
-Hello! I’m a PhD candidate in Chemical Physics at Stanford working with Rhiju Das.
-  I'm interested in developing methods to better understand Nature's complex RNA-based machines,
-  like viruses, as well as learn principles to better design our own RNA-based technologies. <br />
+  Hello! I'm a postdoctoral fellow at the <a href="https://www.wyss.harvard.edu">Wyss Institute</a> working with William Shih
+  to develop ultrasensitive diagnostic tools using DNA nanotechnology. I completed my PhD at Stanford where I worked with Rhiju Das and Vijay Pande.
+  I'm generally interested in combining nucleic acid tools and advances in statistics and deep learning to discover more of molecular biology.
+ <br />
 
  <br />
-When not thinking about science, I can most often be found in <a href="https://www.instagram.com/hwaysteele">a boat of some sort.</a> 
+When not thinking about science, I can most often be found in <a href="https://www.instagram.com/hwaysteele/">a boat of some sort.</a> 
   <br />
 </p>
