--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@ layout: default
 
 <p>
   
-  Hello! I'm a postdoctoral fellow at the <a href="https://www.wyss.harvard.edu">Wyss Institute</a> working with William Shih
-  to develop ultrasensitive diagnostic tools using DNA nanotechnology. I completed my PhD at Stanford where I worked with Rhiju Das and Vijay Pande.
-  I'm generally interested in combining nucleic acid tools and advances in statistics and deep learning to discover more of molecular biology.
+  Hello! I'm a postdoc in the Shih lab at the <a href="https://www.wyss.harvard.edu">Wyss Institute</a>
+  developing methods to scale up how we study dynamics in biology and how we detect ultra-low-concentration molecules.
+  (The two are related! <a href="https://en.wikipedia.org/wiki/Kinetic_proofreading" >What?</a> )
+  
+  I did my PhD in Chemistry at Stanford, where I used deep learning to better parse protein dynamics with Vijay Pande,
+  and improved RNA structure prediction and stabilized RNA therapeutics with Rhiju Das.
+  
+  Prior, I studied theoretical chemistry at Cambridge University as a Churchill scholar, and chemistry and mathematics at Pomona College.
  <br />
 
  <br />
