--- a/index.html
+++ b/index.html
@@ -5,15 +5,21 @@ layout: default
 <p>
   
   Hello! I'm a postdoc in the Shih lab at the <a href="https://www.wyss.harvard.edu">Wyss Institute</a>
-  developing methods to scale up how we study dynamics in biology and how we detect ultra-low-concentration molecules.
+  developing methods to scale up how we study timescales in biology and how we detect ultra-low-concentration molecules.
   (The two are related! <a href="https://en.wikipedia.org/wiki/Kinetic_proofreading">What?</a> )
+  
+  <br />
+  <br />
   
   I did my PhD in Chemistry at Stanford, where I used deep learning to better parse protein dynamics with Vijay Pande,
   and improved RNA structure prediction and stabilized RNA therapeutics with Rhiju Das.
+   
+  <br />
+  <br />
   
   Prior, I studied theoretical chemistry at Cambridge University as a Churchill scholar, and chemistry and mathematics at Pomona College.
+ 
  <br />
-
  <br />
 When not thinking about science, I can most often be found in <a href="https://www.instagram.com/hwaysteele/">a boat of some sort.</a> 
   <br />
