--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@ layout: default
 
 <p>
   
-  Hello! I'm a postdoc in the Shih lab at the <a href="https://www.wyss.harvard.edu">Wyss Institute</a>
-  developing methods to scale up how we study timescales in biology and how we detect ultra-low-concentration molecules.
-  (The two are related! <a href="https://en.wikipedia.org/wiki/Kinetic_proofreading">What?</a>)
+  Hello! I'm a postdoc in the Kern lab at Brandeis University. I'm interested in using deep learning to improve how we design enzymes.
   
   <br />
   <br />
