--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 
 <p>
   
-  Hello! I'm a postdoc in the Kern lab at Brandeis University. I'm interested in using deep learning to improve how we design enzymes.
+  Hello! I'm a postdoc with Dorothee Kern at Brandeis University. I'm interested in using deep learning to improve how we design enzymes.
   
   <br />
   <br />
