--- a/index.html
+++ b/index.html
@@ -4,18 +4,17 @@ layout: default
 
 <p>
   
-  Hello! I'm a postdoc with Dorothee Kern at Brandeis University. I'm interested in using deep learning to improve how we design enzymes.
+  Hello! I'm a Jane Coffin Childs postdoctoral fellow with Dorothee Kern at Brandeis University. I'm interested in using deep learning to improve how we design enzymes.
   
   <br />
   <br />
   
-  I did my PhD in Chemistry at Stanford, where I used deep learning to better parse protein dynamics with Vijay Pande,
-  and improved RNA structure prediction and stabilized RNA therapeutics with Rhiju Das.
+  I did my PhD in Chemistry at Stanford, where I improved RNA structure prediction and stabilized RNA therapeutics with Rhiju Das, and used deep learning to better parse protein dynamics with Vijay Pande.
    
   <br />
   <br />
   
-  Prior, I studied theoretical chemistry at Cambridge University as a Churchill scholar, and chemistry and mathematics at Pomona College.
+ Before that, I studied theoretical chemistry at Cambridge University as a Churchill scholar, and chemistry and mathematics at Pomona College.
  
  <br />
  <br />
