--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@ layout: default
 
 <p>
   
-  Hello! I'm a Jane Coffin Childs postdoctoral fellow with Dorothee Kern at Brandeis University. I'm interested in using deep learning to improve how we design enzymes.
+  Hello! I'm a [Jane Coffin Childs](https://www.jccfund.org/) postdoctoral fellow with [Dorothee Kern](https://kernlab-brandeis.github.io/) at Brandeis University. I'm interested in using deep learning to improve how we design enzymes.
   
   <br />
   <br />
   
-  I did my PhD in Chemistry at Stanford, where I improved RNA structure prediction and stabilized RNA therapeutics with Rhiju Das, and used deep learning to better parse protein dynamics with Vijay Pande.
+  I did my PhD in Chemistry at Stanford, where I improved RNA structure prediction and stabilized RNA therapeutics with [Rhiju Das](https://daslab.stanford.edu/), and used deep learning to better parse protein dynamics with Vijay Pande.
    
   <br />
   <br />
   
- Before that, I studied theoretical chemistry at Cambridge University as a Churchill scholar, and chemistry and mathematics at Pomona College.
+ Before that, I studied theoretical chemistry at Cambridge University as a [Churchill scholar](https://www.churchillscholarship.org/), and chemistry and mathematics at Pomona College.
  
  <br />
  <br />
