--- a/index.html
+++ b/index.html
@@ -4,22 +4,22 @@ layout: default
 
 <p>
   
-  Hello! I'm a  <a href="https://www.jccfund.org/">Jane Coffin Childs</a> postdoctoral fellow with <a href="https://kernlab-brandeis.github.io/">Dorothee Kern</a> at Brandeis University. I'm interested in using deep learning to improve how we design enzymes.
-  
+  Hello! I'm a soon-to-be Instructor in the <a href="https://med.stanford.edu/mcp.html">Department of Molecular & Cellular Physiology</a> at Stanford University in the lab of <a href="https://med.stanford.edu/kobilkalab">Brian Kobilka</a> (who was also my postdoctoral mentor). I'm interested in using biochemical and biophysical methods to study how membrane proteins are trafficked and regulated in cells.
+ 
   <br />
   <br />
   
-  I did my PhD in Chemistry at Stanford, where I improved RNA structure prediction and stabilized RNA therapeutics with <a href="https://daslab.stanford.edu/">Rhiju Das</a>, and used deep learning to better parse protein dynamics with Vijay Pande.
+  I did my PhD in Chemistry at Harvard, where I studied the essential human enzyme O-GlcNAc transferase (OGT). I was joint advised by <a href="https://walkerlab.hms.harvard.edu/">Suzanne Walker</a>, and <a href="https://kahnelab.chemistry.harvard.edu//">Dan Kahne</a>. 
    
   <br />
   <br />
   
-  Before that, I studied theoretical chemistry at Cambridge University as a <a href="https://www.churchillscholarship.org/">Churchill scholar</a>, and chemistry and mathematics at Pomona College.
+  Before that, I studied synthetic organic and organometallic chemistry at the University of Toronto.
  
  <br />
  <br />
   
-When not thinking about science, I can most often be found in <a href="https://www.instagram.com/hwaysteele/">a boat of some sort.</a> 
+Outside the lab I can usually be found <a href="https://www.instagram.com/thejohnnler/">riding my bike </a> all over beautiful California.
   
 <br />
 </p>
