--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 
 <p>
   
-  Hello! I'm a soon-to-be Instructor in the <a href="https://med.stanford.edu/mcp.html">Department of Molecular & Cellular Physiology</a> at Stanford University in the lab of <a href="https://med.stanford.edu/kobilkalab">Brian Kobilka</a> (who was also my postdoctoral mentor). I'm interested in using biochemical and biophysical methods to study how membrane proteins are trafficked and regulated in cells.
+  Hello! I'm a soon-to-be Instructor in the <a href="https://med.stanford.edu/mcp.html">Department of Molecular & Cellular Physiology</a> at Stanford University, working in the lab of <a href="https://med.stanford.edu/kobilkalab">Brian Kobilka</a> (who was also my postdoctoral mentor). I'm interested in using biochemical and biophysical methods to study how membrane proteins are trafficked and regulated in cells.
  
   <br />
   <br />
