--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@ layout: default
   <br />
   <br />
   
-  I did my PhD in Chemistry at Harvard, where I studied the essential human enzyme O-GlcNAc transferase (OGT). I was joint advised by <a href="https://walkerlab.hms.harvard.edu/">Suzanne Walker</a>, and <a href="https://kahnelab.chemistry.harvard.edu//">Dan Kahne</a>. 
+  I earned my Ph.D. in Chemistry from Harvard University, where I studied the essential human enzyme O-GlcNAc transferase (OGT). I was joint advised by <a href="https://walkerlab.hms.harvard.edu/">Prof. Suzanne Walker</a>, and <a href="https://kahnelab.chemistry.harvard.edu//">Prof. Daniel Kahne</a>. 
    
   <br />
   <br />
   
-  Before that, I studied synthetic organic and organometallic chemistry at the University of Toronto.
+  Prior to that, I obtained an honours BSc from the University of Toronto in the Specialist program in Synthetic and Catalytic Chemistry. I conducted undergraduate research in organic synthesis with <a href="https://sites.chem.utoronto.ca/bateylab/">Prof. Robert A. Batey</a> and organometallics with <a href="https://sites.chem.utoronto.ca/chemistry/staff/DSONG/home.html">Prof. Datong Song</a>.
  
  <br />
  <br />
