--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 
 <p>
   
-  Hello! I'm a soon-to-be Instructor in the <a href="https://med.stanford.edu/mcp.html">Department of Molecular & Cellular Physiology</a> at Stanford University, working in the lab of <a href="https://med.stanford.edu/kobilkalab">Brian Kobilka</a> (who was also my postdoctoral mentor). I'm interested in using biochemical and biophysical methods to study how membrane proteins are trafficked and regulated in cells.
+  I'm currently a basic science instructor in <a href="https://med.stanford.edu/mcp.html">the Department of Molecular & Cellular Physiology</a> at Stanford University. I work in the lab of <a href="https://med.stanford.edu/kobilkalab">Prof. Brian Kobilka</a>. I am using biochemical and biophysical methods to study how G protein-coupled receptors are regulated in cells. I joined Prof. Kobilka's lab as a postdoctoral scholar in September 2017 and my research was supported by a Stanford School of Medicine Dean's Postdoctoral Fellowship, a <a href="https://www.damonrunyon.org/">Damon Runyon Cancer Research Foundation Fellowship</a>. In June 2022 I was awarded a K99/R00 Pathway to Independence Award from the <a href="https://www.nigms.nih.gov/">National Institute of General Medical Sciences</a> and was appointed as an instructor from December 2022.
  
   <br />
   <br />
@@ -14,12 +14,13 @@ layout: default
   <br />
   <br />
   
-  Prior to that, I obtained an honours BSc from the University of Toronto in the Specialist program in Synthetic and Catalytic Chemistry. I conducted undergraduate research in organic synthesis with <a href="https://sites.chem.utoronto.ca/bateylab/">Prof. Robert A. Batey</a> and organometallics with <a href="https://sites.chem.utoronto.ca/chemistry/staff/DSONG/home.html">Prof. Datong Song</a>.
+  Prior to that, I obtained an honours BSc from the University of Toronto in the specialist program in synthetic and catalytic chemistry. I conducted undergraduate research in organic synthesis with <a href="https://sites.chem.utoronto.ca/bateylab/">Prof. Robert A. Batey</a> and organometallics with <a href="https://sites.chem.utoronto.ca/chemistry/staff/DSONG/home.html">Prof. Datong Song</a>.
  
  <br />
  <br />
   
-Outside the lab I can usually be found <a href="https://www.instagram.com/thejohnnler/">riding my bike </a> all over beautiful California.
+Outside the lab, I am deeply involved with the local cycling community. I am an active racer on the <a href="https://ncnca.org/">Northern California/Nevada Cycling scene</a> where I race for <a href="https://www.altovelo.org/">Alto Velo</a>. Outside of my own racing, I am passionate about rider education and development. I have been a coach for the <a href="https://cycling.stanford.edu/">Stanford University cycling team</a> since 2020 and was elected to serve on the Alto Velo Board of Directors in 2022.
+You can follow some of my adventures on two wheels <a href="https://www.instagram.com/thejohnnler/">here</a>.
   
 <br />
 </p>
