--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@ layout: default
 
 <p>
   
-  I'm currently a basic science instructor in <a href="https://med.stanford.edu/mcp.html">the Department of Molecular & Cellular Physiology</a> at Stanford University. I work in the lab of <a href="https://med.stanford.edu/kobilkalab">Prof. Brian Kobilka</a>. I am using biochemical and biophysical methods to study how G protein-coupled receptors are regulated in cells. I joined Prof. Kobilka's lab as a postdoctoral scholar in September 2017 and my research was supported by a Stanford School of Medicine Dean's Postdoctoral Fellowship, a <a href="https://www.damonrunyon.org/">Damon Runyon Cancer Research Foundation Fellowship</a>. In June 2022 I was awarded a K99/R00 Pathway to Independence Award from the <a href="https://www.nigms.nih.gov/">National Institute of General Medical Sciences</a> and was appointed as an instructor from December 2022.
+  I'm currently a basic science instructor in <a href="https://med.stanford.edu/mcp.html">the Department of Molecular & Cellular Physiology</a> at Stanford University. I work in the lab of <a href="https://med.stanford.edu/kobilkalab">Prof. Brian Kobilka</a> where I use biochemical and biophysical methods to study how G protein-coupled receptors are regulated in cells. I first joined Prof. Kobilka's lab as a postdoctoral scholar in September 2017; my research has been supported by a Stanford School of Medicine Dean's Postdoctoral Fellowship, a <a href="https://www.damonrunyon.org/">Damon Runyon Cancer Research Foundation Fellowship</a> and, most recently, a K99/R00 Pathway to Independence Award from the <a href="https://www.nigms.nih.gov/">National Institute of General Medical Sciences</a>. In December 2022 I was appointed as an instructor in Molecular & Cellular Physiology.
  
   <br />
   <br />
   
-  I earned my Ph.D. in Chemistry from Harvard University, where I studied the essential human enzyme O-GlcNAc transferase (OGT). I was joint advised by <a href="https://walkerlab.hms.harvard.edu/">Prof. Suzanne Walker</a>, and <a href="https://kahnelab.chemistry.harvard.edu//">Prof. Daniel Kahne</a>. 
+  Prior to coming to Stanford I earned my Ph.D. in Chemistry from Harvard University. As a graduate student I was jointly advised by <a href="https://walkerlab.hms.harvard.edu/">Prof. Suzanne Walker</a> and <a href="https://kahnelab.chemistry.harvard.edu//">Prof. Daniel Kahne</a>. My graduate research focussed on the essential human enzyme O-GlcNAc transferase (OGT). Specifically, my dissertation, titled: <a href="https://www.proquest.com/docview/2451139816?pq-origsite=gscholar&fromopenview=true">OGT Catalyzes Three Distinct Post-translational Modifications via Glycosylation</a> centered around structure-function studies of OGT. However, I was also involved in several projects developing small molecule probes, both for OGT and for the bacterial protease ClpP.
+  
+  
    
   <br />
   <br />
