--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 
 <p>
   
-  I'm currently a basic science instructor in <a href="https://med.stanford.edu/mcp.html">the Department of Molecular & Cellular Physiology</a> at Stanford University. I work in the lab of <a href="https://med.stanford.edu/kobilkalab">Prof. Brian Kobilka</a> where I use biochemical and biophysical methods to study how G protein-coupled receptors are regulated in cells. I first joined Prof. Kobilka's lab as a postdoctoral scholar in September 2017; my research has been supported by a Stanford School of Medicine Dean's Postdoctoral Fellowship, a <a href="https://www.damonrunyon.org/">Damon Runyon Cancer Research Foundation Fellowship</a> and, most recently, a K99/R00 Pathway to Independence Award from the <a href="https://www.nigms.nih.gov/">National Institute of General Medical Sciences</a>. In December 2022 I was appointed as an instructor in Molecular & Cellular Physiology.
+  I'm currently a basic science instructor in <a href="https://med.stanford.edu/mcp.html">the Department of Molecular & Cellular Physiology</a> at Stanford University. I work in the lab of <a href="https://med.stanford.edu/kobilkalab">Prof. Brian Kobilka</a> where I use biochemical and biophysical methods to study how G protein-coupled receptors are regulated in cells. I first joined Prof. Kobilka's lab as a postdoctoral scholar in September 2017; my research has been supported by a Stanford School of Medicine Dean's Postdoctoral Fellowship, a <a href="https://www.damonrunyon.org/">Damon Runyon Cancer Research Foundation Fellowship</a> and, most recently, a K99/R00 Pathway to Independence Award from the <a href="https://www.nigms.nih.gov/">National Institute of General Medical Sciences</a>. As a K99 fellow I am co-mentored by <a href="http://www.vzlab.org/">Prof. Mark von Zastrow</a> (UCSF), an expert in GPCR cell biology and trafficking. In December 2022 I was appointed as an instructor in Molecular & Cellular Physiology.
  
   <br />
   <br />
@@ -21,7 +21,7 @@ layout: default
  <br />
  <br />
   
-Outside the lab, I am deeply involved with the local cycling community. I am an active racer on the <a href="https://ncnca.org/">Northern California/Nevada Cycling scene</a> where I race for <a href="https://www.altovelo.org/">Alto Velo</a>. Outside of my own racing, I am passionate about rider education and development. I have been a coach for the <a href="https://cycling.stanford.edu/">Stanford University cycling team</a> since 2020 and was elected to serve on the Alto Velo Board of Directors in 2022.
+Outside the lab, I am deeply involved with the local cycling community. I am an active racer on the <a href="https://ncnca.org/">Northern California/Nevada Cycling scene</a> where I race for <a href="https://www.altovelo.org/">Alto Velo</a>. Outside of my own racing, I am passionate about rider education and development. I have been a coach for the <a href="https://cycling.stanford.edu/">Stanford University cycling team</a> since 2020 and was elected to serve on the Alto Velo Board of Directors in 2022 (and recently re-elected for 2023).
 You can follow some of my adventures on two wheels <a href="https://www.instagram.com/thejohnnler/">here</a>.
   
 <br />
