--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ layout: default
   <br />
   <br />
   
-  Prior to that, I obtained an honours BSc from the University of Toronto in the specialist program in synthetic and catalytic chemistry. I conducted undergraduate research in organic synthesis with <a href="https://sites.chem.utoronto.ca/bateylab/">Prof. Robert A. Batey</a> and organometallics with <a href="https://sites.chem.utoronto.ca/chemistry/staff/DSONG/home.html">Prof. Datong Song</a>.
+  I obtained an honours BSc from the University of Toronto in the specialist program in synthetic and catalytic chemistry. I conducted undergraduate research in organic synthesis with <a href="https://sites.chem.utoronto.ca/bateylab/">Prof. Robert A. Batey</a> and organometallics with <a href="https://sites.chem.utoronto.ca/chemistry/staff/DSONG/home.html">Prof. Datong Song</a>.
  
  <br />
  <br />
