--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 layout: default
 ---
 
+## About me:
+
 <p>
   
   I'm currently a basic science instructor in <a href="https://med.stanford.edu/mcp.html">the Department of Molecular & Cellular Physiology</a> at Stanford University. I work in the lab of <a href="https://med.stanford.edu/kobilkalab">Prof. Brian Kobilka</a> where I use biochemical and biophysical methods to study how G protein-coupled receptors are regulated in cells. I first joined Prof. Kobilka's lab as a postdoctoral scholar in September 2017; my research has been supported by a Stanford School of Medicine Dean's Postdoctoral Fellowship, a <a href="https://www.damonrunyon.org/">Damon Runyon Cancer Research Foundation Fellowship</a> and, most recently, a K99/R00 Pathway to Independence Award from the <a href="https://www.nigms.nih.gov/">National Institute of General Medical Sciences</a>. As a K99 fellow I am co-mentored by <a href="http://www.vzlab.org/">Prof. Mark von Zastrow</a> (UCSF), an expert in GPCR cell biology and trafficking. In December 2022 I was appointed as an instructor in Molecular & Cellular Physiology.
